jupyterhub-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/jupyter-network: "true"
    io.kompose.service: jupyterhub
  name: jupyterhub
spec:
  containers:
  - args:
    - jupyterhub
    - -f
    - /etc/jupyterhub/jupyterhub_config.py
    - --debug
    image: illumidesk/jupyterhub:fd28e224f2de
    name: jupyterhub
    resources: {}
    volumeMounts:
    - mountPath: /var/run/docker.sock
      name: jupyterhub-claim0
    - mountPath: /home
      name: jupyterhub-claim1
    - mountPath: /data
      name: data
    - mountPath: /etc/traefik
      name: jupyterhub-claim3
    - mountPath: /secrets/keys
      name: jupyterhub-claim4
  restartPolicy: OnFailure
  volumes:
  - name: jupyterhub-claim0
    persistentVolumeClaim:
      claimName: jupyterhub-claim0
  - name: jupyterhub-claim1
    persistentVolumeClaim:
      claimName: jupyterhub-claim1
  - name: data
    persistentVolumeClaim:
      claimName: data
  - name: jupyterhub-claim3
    persistentVolumeClaim:
      claimName: jupyterhub-claim3
  - name: jupyterhub-claim4
    persistentVolumeClaim:
      claimName: jupyterhub-claim4
status: {}
