reverse-proxy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/jupyter-network: "true"
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  containers:
  - image: traefik:v1.7-alpine
    name: reverse-proxy
    ports:
    - containerPort: 8000
    - containerPort: 443
    - containerPort: 8080
    resources: {}
    volumeMounts:
    - mountPath: /etc/traefik/
      name: reverse-proxy-claim0
    - mountPath: /var/run/docker.sock
      name: reverse-proxy-claim1
  restartPolicy: OnFailure
  volumes:
  - name: reverse-proxy-claim0
    persistentVolumeClaim:
      claimName: reverse-proxy-claim0
  - name: reverse-proxy-claim1
    persistentVolumeClaim:
      claimName: reverse-proxy-claim1
status: {}
