setup-course-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/jupyter-network: "true"
    io.kompose.service: setup-course
  name: setup-course
spec:
  containers:
  - args:
    - hypercorn
    - --bind
    - 0.0.0.0:8000
    - --workers
    - "1"
    - illumidesk.setup_course.app:app
    image: illumidesk/setup-course
    name: setup-course
    resources: {}
    volumeMounts:
    - mountPath: /var/run/docker.sock
      name: setup-course-claim0
    - mountPath: /mnt
      name: setup-course-claim1
    - mountPath: /srv/jupyterhub
      name: data
    - mountPath: /home/ubuntu/illumidesk_deployment
      name: setup-course-claim3
  restartPolicy: OnFailure
  volumes:
  - name: setup-course-claim0
    persistentVolumeClaim:
      claimName: setup-course-claim0
  - name: setup-course-claim1
    persistentVolumeClaim:
      claimName: setup-course-claim1
  - name: data
    persistentVolumeClaim:
      claimName: data
  - name: setup-course-claim3
    persistentVolumeClaim:
      claimName: setup-course-claim3
status: {}
