reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  - name: "443"
    port: 443
    targetPort: 443
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: reverse-proxy
status:
  loadBalancer: {}
